--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <footer class="footer">
-        <p>Bir ELİPS kuruluşudur</p>
+        <p>Bir ELİPS kuruluşudur.</p>
       </footer>
     
 </body>
