--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="menu">
           <ul class="list">
             <li class="item"><a href="index.html" class="active">Ana Sayfa</a></li>
-            <li class="item"><a href="uzay-kirliligi-nedir.html">Genel Araştırma</a></li>
-            <li class="item"><a href="galeri.html">Konular</a></li>
-            <li class="item"><a href="farkindayim.html">Veriler</a></li>
-            <li class="item"><a href="hakkimizda.html">İletişim</a></li>
+            <li class="item"><a href="index.html">Genel Araştırma</a></li>
+            <li class="item"><a href="index.html">Konular</a></li>
+            <li class="item"><a href="index.html">Veriler</a></li>
+            <li class="item"><a href="index.html">İletişim</a></li>
           </ul>
           
         </div>
