--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
         <div class="icerik">
           <p class="yazi">
-          COPDA avantajlı kategori özelliği ve spesifik kategori adlandırılmalarıyla size uzay kirliliği ve diğer kozmolojik olayları araştırmanızda yardımcı olur. Uluslararası paydaşlarından sağladığı onaylı bilgilerle, doğruluk oranı en yüksek bilgileri sunar.
+          COPDA avantajlı kategori özelliği ve spesifik kategori adlandırılmalarıyla size uzay kirliliği ve diğer kozmolojik olayları araştırmanızda yardımcı olur. Uluslararası paydaşlarından sağladığı onaylı bilgi ve verilerle, doğruluk oranı en yüksek bilgileri sunar.
         </p>
         </div>
       </div>
