--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
     
     <nav class="navbar">
         <a href="index.html" class="logo">
-          <img src="copda-ori-ori.png" alt="Logo">
+          <img src="/others/copda-ori-ori.png" alt="Logo">
         </a>
         <div class="menu">
           <ul class="list">
-            <li class="item"><a href="index.html" class="active">Ana Sayfa</a></li>
-            <li class="item"><a href="index.html">Genel Araştırma</a></li>
-            <li class="item"><a href="index.html">Konular</a></li>
-            <li class="item"><a href="index.html">Veriler</a></li>
-            <li class="item"><a href="index.html">İletişim</a></li>
+            <li class="item"><a href="/copda/index.html" class="active">Ana Sayfa</a></li>
+            <li class="item"><a href="/copda/Güncel_Konular.html">Güncel Konular</a></li>
+            <li class="item"><a href="/copda/Araştırmalar.html">Araştırmalar</a></li>
+            <li class="item"><a href="/copda/İletişim.html">İletişim</a></li>
           </ul>
           
         </div>
@@ -42,7 +41,7 @@
       </div>
       <div class="fotolar">
         <h1>Uluslararası Paydaşlar</h1>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/NASA_logo.svg/2449px-NASA_logo.svg.png" alt="a"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/ESA_logo.png/1024px-ESA_logo.png" alt="a"><img src="https://www.un-spider.org/sites/default/files/unoosa_forinstitutionsKP.png" alt="a"> <img src="el-ori.png" alt=""> 
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/NASA_logo.svg/2449px-NASA_logo.svg.png" alt="a"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/ESA_logo.png/1024px-ESA_logo.png" alt="a"><img src="https://www.un-spider.org/sites/default/files/unoosa_forinstitutionsKP.png" alt="a"> <img src="/others/el-ori.png" alt=""> 
       </div>
       <div class="nedenbiz">
         <div class="icerik1">
