Biz Kimiz kısmı bitti.

--- a/İletişim.html
+++ b/İletişim.html
@@ -31,7 +31,7 @@
 			<ul class="list">
 				<li class="item"><a href="index.html" >Ana Sayfa</a></li>
 				<li class="item"><a href="Güncel_Konular.html">Güncel Konular</a></li>
-				<li class="item"><a href="Araştırmalar.html">Araştırmalar</a></li>
+				<li class="item"><a href="Araştırmalar.html">Biz Kimiz?</a></li>
 				<li class="item"><a href="İletişim.html" class="active">İletişim</a></li>
 			</ul>
 		</div>
