--- a/Araştırmalar.html
+++ b/Araştırmalar.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Araştırmalar | COPDA</title>
+  <title>Biz Kimiz? | COPDA</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -18,6 +18,62 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index-style.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+   
+   /* Mektup stili */
+.mektup {
+  margin: 50px auto;
+  max-width: 800px;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+
+}
+
+.mektup h2 {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;  
+  font-family: 'Roboto', sans-serif;
+}
+
+.mektup p {
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 10px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.mektup .imza {
+  text-align: right;
+  margin-top: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+.mektup{
+    margin-top: 160px;
+   }
+
+.mektup p , h2{
+  padding: 20px;
+}   
+
+/* Medya sorguları */
+@media screen and (max-width: 600px) {
+  .mektup {
+    margin: 30px auto;
+    padding: 15px;
+    font-size: 14px;
+  }
+
+  .mektup h2 {
+    font-size: 20px;
+  }
+
+}
+
+  </style>
 </head>
 <body>
 
@@ -29,11 +85,23 @@
 			<ul class="list">
 				<li class="item"><a href="index.html" >Ana Sayfa</a></li>
 				<li class="item"><a href="Güncel_Konular.html" >Güncel Konular</a></li>
-				<li class="item"><a href="Araştırmalar.html" class="active">Araştırmalar</a></li>
+				<li class="item"><a href="Araştırmalar.html" class="active">Biz Kimiz?</a></li>
 				<li class="item"><a href="İletişim.html" >İletişim</a></li>
 			</ul>    
 		</div>
 	</nav>
 
+  <div class="mektup">
+    <h2>Biz Kimiz?</h2>
+    <p>Merhaba;</p>
+    <p>Öncelikle sizleri burada ağırlamaktan dolayı büyük bir mutluluk duyuyoruz! Gençler olarak, uzay kirliliğiyle mücadelede bir fark yaratma amacıyla burada bir araya geldik ve sizleri de bu önemli konuda bilinçlendirmek için bu websitesini oluşturduk.</p>
+    <p>Uzay, bilinmezlik ve keşiflerle dolu büyülü bir yer. Ancak, gökyüzünde her geçen gün artan sayıda uydu, enkaz parçaları ve atıklar nedeniyle bu güzellikler tehdit altında. Bizler, bu soruna çözüm bulma potansiyeline sahip olan gençleriz. Sizlerin de bu yolculukta bizimle birlikte olmanız, bize umut ve motivasyon veriyor.</p>
+    <p>Bizler, bu websitesini oluşturarak sizlere uzay kirliliğinin etkilerini anlatmayı ve bununla mücadele etmek için neler yapabileceğinizi göstermeyi amaçlıyoruz. Amacımız, sizi bilinçlendirmek ve bu önemli konuda harekete geçmenizi sağlamaktır. Sizler, geleceğin liderleri, bilim insanları ve çevre savunucularısınız. Bu yolda atacağınız her adım, uzayın temizliği ve güzelliği için bir kazanç olacaktır.</p>
+    <p>Her biriniz, kendi yaşam tarzınızda ve çevrenizde küçük değişiklikler yaparak büyük bir etki yaratabilirsiniz. İhtiyaçlarımızı bilinçli bir şekilde tüketmek, geri dönüşüm yapmak, enerji tasarrufu sağlamak ve uzay araştırmaları hakkında bilinçlendirme çalışmalarına katılmak gibi adımlarla uzay kirliliğine karşı savaşta yer alabilirsiniz.</p>
+    <p>Unutmayın, her birinizin sesi önemlidir. Kendi sosyal çevrenizde, okulunuzda ve toplumunuzda bu konuda farkındalık yaratın. Ailenize, arkadaşlarınıza ve çevrenizdeki insanlara bu websitesinden bahsedin ve onları da bu harekete dahil etmeye teşvik edin. Birlikte, daha güçlüyüz ve değişimi başarabiliriz.</p>
+    <p>Son olarak, burada aramıza katıldığınız için size teşekkür etmek istiyoruz. Uzayı koruma ve temiz tutma konusundaki farkındalığı yaymak için sizinle birlikte çalışmayı dört gözle bekliyoruz. Umarız bu websitesi, sizlere ilham verir ve harekete geçmeniz için bir itici güç olur.</p>
+    <p>Hep birlikte, temiz ve berrak bir gökyüzü için çalışalım!</p>
+    <div class="imza">Sevgi ve umutla,<br>Sizlerin Genç Dostları</div>
+  </div>
 </body>
 </html>
