--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<ul class="list">
 				<li class="item"><a href="index.html" class="active">Ana Sayfa</a></li>
 				<li class="item"><a href="Güncel_Konular.html">Güncel Konular</a></li>
-				<li class="item"><a href="Araştırmalar.html">Araştırmalar</a></li>
+				<li class="item"><a href="Araştırmalar.html">Biz Kimiz?</a></li>
 				<li class="item"><a href="İletişim.html">İletişim</a></li>
 			</ul>
 		</div>
